# argh-demo

./: Cargo.toml  README-zh.md  README.md
.github/workflows/: release.yml
src/: main.rs
src/commands/: add.rs  sub.rs
