[package]
name = "argh-demo"
version = "0.0.2"
authors = ["Chojan Shang <psiace@outlook.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/psiace/argh-demo"
documentation = "https://docs.rs/argh-demo"
readme = "README.md"
description = """
Just a demo for argh.
"""

include = [
  "Cargo.toml",
  "src/**/*"
]

[dependencies]
argh = "0.1"
